Align CI and supply chain with residual qualification